# peg-solitaire-solver

./: .gitignore  Cargo.toml
db/: peg_solitaire_puzzles.sql  peg_solitaire_values.sql  peg_solitaire_values_deep_tree_traversal.sql
src/: brute_force_solver.rs  lib.rs  main.rs  peg_solitaire_environment.rs  state_function.rs
