[package]
name = "rl"
version = "0.1.0"
edition = "2021"
authors = ["CloseChoice <tobias.pitters@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"